k8s/jenkins-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 18080
