k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /github-webhook(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jenkins-service
                port:
                  number: 18080
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vue-service
                port:
                  number: 8000
          - path: /boot(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: boot-service
                port:
                  number: 8001
